--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -174,6 +174,11 @@ footer {
     margin: 0 auto;
   }
 }
+.footer__img-dark {
+  background-color: $middle-grey;
+  padding: 5px;
+  border-radius: 50%;
+}
 
 
 // MEDIA QUERIES
@@ -195,6 +200,12 @@ footer {
       font-size: .9em;
     }
   }
+  .button-grid {
+    flex-wrap: wrap;
+  }
+  .button-grid__item {
+    width: 60%;
+  }
 }
 @media screen and (max-width: 700px) {
   .cover {
@@ -210,6 +221,16 @@ footer {
   main {
     width: 90%;
   }
+  header {
+    flex-direction: column;
+    align-items: center;
+    h1 {
+      padding-bottom: 0;
+    }
+  }
+  .nav {
+    padding: 0;
+  }
 }
 @media screen and (max-width: 600px) {
   .grid__item--one-half {
@@ -220,5 +241,8 @@ footer {
       width: auto;
       height: 250px;
     }
+  }
+  .button-grid__item {
+    width: 80%;
   }
 }
